[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Review repo for open session on 9-18-2020."
authors = ["Merry Cimakasky <mkcimakasky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
